2005-02-15  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbpangolayoutline.c: Added Pango::LayoutLine#extents, #pixel_extents
	#get_x_ranges. Added the accessors.
	* src/rbpangolayoutiter.c: Added Pango::LayoutIter#line, #char_extents,
	#cluster_extents, #run_extents, #line_extents, #layout_extents
	#run.
	* src/rbpangoglyphitem.c: Added. 
	* src/rbpangoglyphinfo.c: Fix a bug of Pango::GlyphInfo#set_glyph. 
	* src/rbpangotabarray.c: Added a comment. 

2005-02-13  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbpangolayout.c: Added Pango::Layout#log_attrs.
	* src/rbpangorectangle.c: Added Pango::Rectangle#ascent, #descent, 
	#lbearing, #rbearing.
	* src/rbpangoattriterator.c: Added Pango::AttrIterator#attrs. 
	* src/rbpangoattrlist.c: Added Pango::AttrList#filter.
	* src/rbpangofontset.c: Added Pango::FontSet#each for Pango-1.4. 
	* src/rbpangofontmap.c: Rename Pango::FontMap#list_families to
	#families. Added #shape_engine_type. Added Pango::FcFontMap, XftFontMap.
	* src/rbpangofontface.c: Added Pango::FontFace#sizes. 
	* src/rbpangofontfamily.c: Added Pango::FontFamily#monospace?. 
	Rename Pango::FontFamily#list_faces to #faces.
	* src/rbpangofontmetrics.c: Added underline_(thickness|position),
	strikethrough_(thickness|position).
	* src/rbpangofontdescription.c: Added Pango::FontDescription#set_absolute_size,
	#size_is_absolute? for Pango-1.8.x.
	* src/rbpango.h: Added some type macros. Define PANGO_ENABLE_(ENGINE|BACKEND).
	* src/rbpangofont.c: Added Pango::Font#get_coverage, #get_glyph_extents.
	Added Pango::FcFont, Pango::XftFont.
	* src/rbpangocoverage.c: Added. 
	* src/rbpangoanalysis.c: Added Pango::Analysis#set_extra_attrs, 
	#extra_attrs.
	* sample/attribute.rb: Follow Ruby/GTK changes.
	* src/rbpangoitem.c: Added Pango::Item#offset, #set_offset, #length,
	#set_length, #num_chars, #set_num_chars, #analysis, #set_analysis.
	* src/rbpangologattr.c: Added Pango::LogAttr#backspace_deletes_character?,
	#set_backspace_deletes_characer.